--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/winston": "^2.4.4",
-    "nodemon": "^3.0.3"  
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",  
-    "start": "node src/index.js"    
+    "dev": "nodemon src/server.ts",
+    "start": "node src/server.ts"
   }
 }
