--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,15 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "error": "^10.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/winston": "^2.4.4",
